@@ -1,3 +1,4 @@
+  - Add a site-specific extractor for www.eventsinfocus.org
   - Add a site-specific extractor for m.news.cctv.com
   - Improve the extractor of newnet.tw
 
